samples/_failures_safe/1761310461_092be6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d3caa34.c: In function ‘main’:
./samples/SAFE/__tmp_8d3caa34.c:178:5: error: expected expression at end of input
  178 |     if (len >
      |     ^~
./samples/SAFE/__tmp_8d3caa34.c:178:5: error: expected declaration or statement at end of input
